forgot a dot, but tried to fix some spacing too

--- a/web/homepage.css
+++ b/web/homepage.css
@@ -25,7 +25,7 @@ html,body{
     position: absolute;
     right: 0;
   }
-  background {
+  .background {
       background-image: url("adventure-alpine-background.jpg");
       background-size: auto;
       min-height: 100vh;
